# zenodo-client

./: .bumpversion.cfg  .cruft.json  .flake8  .gitignore  CONTRIBUTING.rst  LICENSE  README.md  README.md.rej  justfile  pyproject.toml  pyproject.toml.rej  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  CONTRIBUTING.md.rej  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml
.github/workflows/: tests.yml
docs/: Makefile
docs/source/: cli.rst  conf.py  index.rst  index.rst.rej  installation.rst  usage.rst
src/zenodo_client/: __init__.py  __main__.py  _pydantic_compat.py  api.py  api.py.rej  cli.py  cli.py.rej  struct.py  version.py
tests/: __init__.py  test_lifecycle.py  test_version.py
