##########################
# Setup.py Configuration #
##########################
[metadata]
name = zenodo_client
version = 0.0.4-dev
description = A wrapper for the Zenodo API.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/cthoyt/zenodo-client
download_url = https://github.com/cthoyt/zenodo-client/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/zenodo-client/issues
    Source Code = https://github.com/cthoyt/zenodo-client

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    cthoyt
    cookiecutter
    # TODO add your own free-text keywords

[options]
install_requires =
    dataclasses; python_version < "3.7"
    dataclasses_json
    pystow>=0.0.11
    requests
    # Command line tools
    click
    more_click

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    zenodo_client = zenodo_client.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = zenodo_client
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/zenodo_client
    .tox/*/lib/python*/site-packages/zenodo_client

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
